Fixed button layout and spacing of posts

--- a/assessment3/src/App.css
+++ b/assessment3/src/App.css
@@ -6,6 +6,7 @@
  *  Bootstrap standards already overlap much,
  *  but the medium size needed editing.
  */
+ 
 @media (max-width: 1024px) and (min-width: 641px) {
     .col-md-12 {
       -ms-flex: 0 0 100%;
@@ -24,11 +25,16 @@ img{ /*fill the available space*/
   width:100%;
   height:100%
 }
+
+button{
+  margin-right: 10px;
+}
 .post-image{
   max-height: 425px; /*force same height */
 }
-.post-image-skinny{ /*no max height (just match everything on the row)*/
-  padding-bottom: 25px;
+
+.post-col{
+  margin-bottom:10px;
 }
 
 .post-body:before, .post-body-skinny:before {
@@ -37,7 +43,7 @@ img{ /*fill the available space*/
   height:100%;    
   position:absolute;
   left:0;
-  top:0;
+  bottom:0;
   background:linear-gradient(transparent 75%, white);
 }
 
@@ -54,7 +60,7 @@ img{ /*fill the available space*/
 }
 
 .sort-header{
-  padding: 15px;
+  padding: 10px;
 }
 
 
